# cmake-starter-project

./: .all-contributorsrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  index.html
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: build.yml
application/: CMakeLists.txt  config.h  config.h.in  config.in  main.cpp  pch.h  pch.hpp
application/core/: logger.cpp  logger.h  platform_detection.h
application/debug/: assert.h  instrumentor.h
application/share/: README.md
develop/: annotated.html  annotated_dup.js  assert_8h.html  assert_8h.js  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  class_horus_1_1_debug_1_1_instrumentation_timer-members.html  class_horus_1_1_debug_1_1_instrumentation_timer.html  class_horus_1_1_debug_1_1_instrumentation_timer.js  class_horus_1_1_debug_1_1_instrumentation_timer__coll__graph.map  class_horus_1_1_debug_1_1_instrumentation_timer__coll__graph.md5  class_horus_1_1_debug_1_1_instrumentor-members.html  class_horus_1_1_debug_1_1_instrumentor.html  class_horus_1_1_debug_1_1_instrumentor.js  class_horus_1_1_debug_1_1_instrumentor__coll__graph.map  class_horus_1_1_debug_1_1_instrumentor__coll__graph.md5  class_horus_1_1_logger-members.html  class_horus_1_1_logger.html  class_horus_1_1_logger.js  class_horus_1_1_logger__coll__graph.map  class_horus_1_1_logger__coll__graph.md5  classes.html  config_8h_source.html  dir_000001_000002.html  dir_000001_000003.html  dir_157733d0f3e04ff3f504b6237af55ed5.html  dir_157733d0f3e04ff3f504b6237af55ed5.js  dir_157733d0f3e04ff3f504b6237af55ed5_dep.map  dir_157733d0f3e04ff3f504b6237af55ed5_dep.md5  dir_5750905eefca64d34c839bbc604a0c99.html  dir_5750905eefca64d34c839bbc604a0c99.js  dir_5750905eefca64d34c839bbc604a0c99_dep.map  dir_5750905eefca64d34c839bbc604a0c99_dep.md5  dir_6eb70a790be4670225cf78ab162ae6e2.html  dir_6eb70a790be4670225cf78ab162ae6e2.js  dir_d462e0c4d647462d0554d68f8327e183.html  dir_d462e0c4d647462d0554d68f8327e183.js  (+38 more)
develop/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js
docs/: CMakeLists.txt  Doxyfile.in
proj_test/: CMakeLists.txt
proj_test/include/: Entity.h
proj_test/src/: Entity.cpp  main.cpp
src/: CMakeLists.txt  CMakelists.txt  main.cpp  pch.h  project_config.h  project_config.h.in
src/assets/: readme.txt
src/log/: HorusLog.cpp  HorusLog.h  log.cpp  log.h
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt  factorial.cpp  never_fails.cpp
